<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="65dp"
        tools:text="@string/app_title" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cerveja_300_price" />

    <EditText
        android:id="@+id/preco300"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20"
        android:ems="10"
        android:hint="@string/locale_currency"
        android:contentDescription="@string/description_cerveja_300_price"
        android:inputType="numberDecimal" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cerveja_350_price"

        />

    <EditText
        android:id="@+id/preco350"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20"
        android:ems="10"
        android:hint="@string/locale_currency"
        android:contentDescription="@string/description_cerveja_350_price"
        android:inputType="numberDecimal" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cerveja_473_price"
        />

    <EditText
        android:id="@+id/preco473"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20"
        android:ems="10"
        android:hint="@string/locale_currency"
        android:contentDescription="@string/description_cerveja_473_price"
        android:inputType="numberDecimal" />



    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cerveja_600_price"
        android:contentDescription="@string/description_cerveja_600_price"
        />

    <EditText
        android:id="@+id/preco600"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/locale_currency"
        android:contentDescription="@string/description_cerveja_600_price"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30"
        android:contentDescription="@string/description_btn_calcular"
        android:text="@string/btn_calcular" />


</LinearLayout>